# fastapi

./: README.md  main.py  pyproject.toml  requirements.txt
public/: index.html
