[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["KYEONGMIN CHO <ggingmin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^4.1.0"
asgiref = "^3.7.2"
certifi = "^2023.11.17"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
dnspython = "^2.4.2"
email-validator = "^2.1.0.post1"
h11 = "^0.14.0"
httptools = "^0.6.1"
idna = "^3.6"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"
orjson = "^3.9.10"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
requests = "^2.31.0"
six = "^1.16.0"
sniffio = "^1.3.0"
starlette = "^0.32.0.post1"
typing-extensions = "^4.8.0"
ujson = "^5.8.0"
urllib3 = "^2.1.0"
uvicorn = "^0.24.0.post1"
uvloop = "^0.19.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
