[tool.poetry]
name = "fastapi-proj"
version = "0.1.0"
description = ""
authors = ["KYEONGMIN CHO <ggingmin@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_proj"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
